# JsonRendrer

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: demo.ipynb
src/json_renderer/: __init__.py  html_renderer.py  md_renderer.py  utils.py
tests/: test_html_renderer.py  test_md_renderer.py
tests/fixtures/: complex.json  test1.json
