[project]
name = "json-renderer"
version = "1.0.0"
description = "Safely render arbitrary JSON to HTML and Markdown — handles unicode, dollar signs, embedded markdown, and every edge case."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Praveen"},
]
dependencies = [
    "markdown>=3.5",
    "bleach>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbformat>=5.0",
]
demo = [
    "streamlit>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/json_renderer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
